# hevy-cli

./: README.md  pyproject.toml
hevy_cli/: client.py  display.py  main.py
skill/: hevy-cli.skill
skill/hevy-cli/: SKILL.md
skill/hevy-cli/references/: commands.md
