[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hevy-cli"
version = "0.1.1"
description = "CLI tool to interact with the Hevy fitness app API"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "click>=8.1",
    "rich>=13.0",
]

[project.scripts]
hevy = "hevy_cli.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["hevy_cli*"]
